grammar_mini
Prog ::= BuildingBlockList
BuildingBlockList ::= BuildingBlock BuildingBlockList | BuildingBlock
BuildingBlock ::= FnDef | StmtList
FnDef ::= fn name popen ArgSection bopen StmtList
ArgSection ::= pclose | ArgList pclose
ArgList ::= name | ArgListPrefix name
ArgListPrefix ::= name comma | name comma ArgListPrefix
StmtList ::= Stmt StmtList | Stmt
Stmt ::= Assign | If | FnCall
Assign ::= name eq Expr
If ::= if popen Expr pclose bopen StmtList bclose else bopen StmtList bclose
FnCall ::= name bopen ArgList bclose
Expr ::= ExprElem ExprRest | ExprElem
ExprRest ::= Op Expr
Op ::= add | sub
ExprElem ::= FnCall | num | name
